# aws-inventor

./: .gitignore  README.md  pyproject.toml
aws_inventor/: __main__.py  utils.py
aws_inventor/kms/: format_keys.py  list_keys.py
