[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-inventor"
description = 'Inventory for AWS'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "boto3~=1.24",
    "click~=8.0",
    "openpyxl",
    "pandas~=1.5.0",
    "tqdm",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/akx/aws-inventor#readme"
Issues = "https://github.com/akx/aws-inventor/issues"
Source = "https://github.com/akx/aws-inventor"

[project.scripts]
aws-inventor = "aws_inventor.__main__:main"

[tool.hatch.version]
path = "aws_inventor/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=aws_inventor --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "aws_inventor/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
